force-app/main/default/objects/Teacher__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Algebra I</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Character Education</fullName>
            </value>
            <value>
                <fullName>Cooking Class</fullName>
            </value>
            <value>
                <fullName>ELA</fullName>
            </value>
            <value>
                <fullName>Fiqh</fullName>
            </value>
            <value>
                <fullName>Hadith</fullName>
            </value>
            <value>
                <fullName>Islamic Faith/Akaid</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>Qur&apos;an Memorization</fullName>
            </value>
            <value>
                <fullName>Qur&apos;an Recitation</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Social Studies</fullName>
            </value>
            <value>
                <fullName>Tafseer</fullName>
            </value>
            <value>
                <fullName>Turkce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>