force-app/main/default/objects/Teacher__c/fields/Teacher_ID__c.field-meta.xml
<CustomField>
    <fullName>Teacher_ID__c</fullName>
    <label>Teacher_ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>